Updated Polish translation

--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -15,7 +15,7 @@
     <string name="hide">Ukryj</string>
     <string name="hide_from_quick_picks">Ukryj z \"Szybkiego wyboru\"</string>
     <string name="related_albums">Powiązane albumy</string>
-    <string name="similar_artists">Podobni artyści</string>
+    <string name="similar_artists">Podobni wykonawcy</string>
     <string name="playlists_you_might_like">Playlisty, które mogą ci się spodobać</string>
     <string name="an_error_has_occurred">Wystąpił błąd</string>
     <string name="albums">Albumy</string>
@@ -26,7 +26,7 @@
     <string name="quick_picks">Szybki wybór</string>
     <string name="songs">Utwory</string>
     <string name="other_versions">Inne wersje</string>
-    <string name="album_no_alternative_version">Ten album nie posiada żadnych alternatywnych wersji</string>
+    <string name="album_no_alternative_version">Ten album nie posiada żadnych alternatywnych wersji.</string>
     <string name="enqueue">Dodaj do kolejki</string>
     <string name="shuffle">Losowo</string>
     <string name="view_all">Pokaż wszystkie</string>
@@ -204,29 +204,29 @@
     <string name="_light">Jasny</string>
     <string name="downloaded">Pobrane</string>
     <string name="turn_off">Wyłącz</string>
-    <string name="download">Download</string>
-    <string name="_default">Default</string>
-    <string name="dynamic">Dynamic</string>
-    <string name="discovery">Discovery</string>
-    <string name="mood">Mood</string>
-    <string name="new_albums">New albums</string>
-    <string name="moods_and_genres">Moods and genres</string>
-    <string name="search_queries">" search queries"</string>
-    <string name="not_find_battery_optimization_settings">Couldn\'t find battery optimization settings, please whitelist manually</string>
-    <string name="search">Search...</string>
+    <string name="download">Pobierz</string>
+    <string name="_default">Domyślny</string>
+    <string name="dynamic">Dynamiczny</string>
+    <string name="discovery">Odkrywanie</string>
+    <string name="mood">Nastrój</string>
+    <string name="new_albums">Nowe albumy</string>
+    <string name="moods_and_genres">Nastroje i gatunki</string>
+    <string name="search_queries">" zapytania"</string>
+    <string name="not_find_battery_optimization_settings">Nie udało się znaleźć ustawień optymalizacji baterii. Ręcznie dodaj aplikację do białej listy.</string>
+    <string name="search">Szukaj...</string>
     <string name="no">Anuluj</string>
     <string name="stop">Zatrzymaj</string>
     <string name="preferences">PREFERENCJE</string>
-    <string name="it_seems_that_youtube_music_is_not_installed">It seems that YouTube Music is not installed!</string>
-    <string name="listen_on_youtube">Listen on YouTube</string>
-    <string name="listen_on_youtube_music">Listen on YouTube Music</string>
-    <string name="on_device">On device</string>
-    <string name="open_settings">Open settings</string>
-    <string name="permission_declined_grant_media_permissions">Permission declined, please grant media permissions in the settings of your device.</string>
-    <string name="wavy_timeline">Wavy timeline</string>
-    <string name="enable_wavy_timeline">Enable the wavy timeline</string>
-    <string name="play_next">Play next</string>
-    <string name="toggle_lyrics">Toggle lyrics</string>
-    <string name="by_tapping_on_the_thumbnail">By tapping on the thumbnail</string>
-    <string name="require_mic_permission">Visualizer effect require mic permission, grant please.</string>
+    <string name="it_seems_that_youtube_music_is_not_installed">Wygląda na to, że YouTube Music nie jest zainstalowane!</string>
+    <string name="listen_on_youtube">Posłuchaj na YouTube</string>
+    <string name="listen_on_youtube_music">Posłuchaj na YouTube Music</string>
+    <string name="on_device">Na urządzeniu</string>
+    <string name="open_settings">Otwórz ustawienia</string>
+    <string name="permission_declined_grant_media_permissions">Brak uprawnień, włącz uprawnienie do muzyki i dźwięku w ustawieniach aplikacji.</string>
+    <string name="wavy_timeline">Falista oś czasu</string>
+    <string name="enable_wavy_timeline">Włącz falistą oś czasu</string>
+    <string name="play_next">Odtwórz jako następne</string>
+    <string name="toggle_lyrics">Przełączaj napisy</string>
+    <string name="by_tapping_on_the_thumbnail">Dotykając miniatury</string>
+    <string name="require_mic_permission">Efekty wizualizatora wymagają uprawnienia do mikrofonu, włącz je w ustawieniach.</string>
 </resources>
