Updated french more emojies
Updated french more emojies, im testing UI zwith emojies if someones for the next versions can tell if its look good

--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -17,23 +17,23 @@
     <string name="related_albums">💿 Albums associés</string>
     <string name="similar_artists">👤 Artistes similaires</string>
     <string name="playlists_you_might_like">💜 Listes de lecture que vous pourriez aimer</string>
-    <string name="an_error_has_occurred">Une erreur est survenue</string>
-    <string name="albums">Albums</string>
-    <string name="artists">Artistes</string>
+    <string name="an_error_has_occurred">❌ Une erreur est survenue</string>
+    <string name="albums">💿 Albums</string>
+    <string name="artists">👤 Artistes</string>
     <string name="enter_the_playlist_name">Entrez le nom de la playlist</string>
     <string name="playlists">🔀 Playlists</string>
     <string name="favorites">❤ Favoris</string>
-    <string name="quick_picks">Sélections rapides</string>
-    <string name="songs">Chansons</string>
-    <string name="other_versions">Autres versions</string>
-    <string name="album_no_alternative_version">Cet album n\'a pas de version alternative</string>
+    <string name="quick_picks">✨ Sélections rapides</string>
+    <string name="songs">🎶 Chansons</string>
+    <string name="other_versions">💿 Autres versions</string>
+    <string name="album_no_alternative_version">💿 Cet album n\'a pas de version alternative</string>
     <string name="enqueue">Mettre en file d\'attente</string>
     <string name="shuffle">Aléatoire</string>
     <string name="view_all">Voir tout</string>
     <string name="from_wikipedia_cca">De Wikipedia sous license Creative Commons Attribution CC-BY-SA 3.0</string>
-    <string name="overview">Aperçu</string>
-    <string name="singles">Titres</string>
-    <string name="library">Bibliothèque</string>
+    <string name="overview">✨ Aperçu</string>
+    <string name="singles">📀 Titres</string>
+    <string name="library">🗃 Bibliothèque</string>
     <string name="artist_no_release_album">Cet artiste n’a sorti aucun album</string>
     <string name="artist_no_release_single">Cet artiste n’a sorti aucun titre</string>
     <string name="delete_playlist">Voulez-vous vraiment supprimer cette playlist ?</string>
@@ -55,13 +55,13 @@
     <string name="error">❌ Une erreur est survenue</string>
     <string name="enter_a_name">🔎 Rechercher</string>
     <string name="online">🌐 En ligne</string>
-    <string name="no_results_found">❌ Aucun résultat trouvé.\nVeuillez essayer une autre recherche ou une autre catégorie</string>
-    <string name="videos">Vidéos</string>
-    <string name="featured">En vedette</string>
-    <string name="view_the_source_code">👀 Afficher le code source</string>
-    <string name="report_an_issue">🐛 Signaler un problème</string>
-    <string name="you_will_be_redirected_to_github">🐱 Vous allez être redirigé vers GitHub</string>
-    <string name="request_a_feature_or_suggest_an_idea">💡 Demander une fonctionnalité ou suggérer une idée</string>
+    <string name="no_results_found">🔍 Aucun résultat trouvé.\nVeuillez essayer une autre recherche ou une autre catégorie</string>
+    <string name="videos">🎞 Vidéos</string>
+    <string name="featured">📡 En vedette</string>
+    <string name="view_the_source_code">Afficher le code source</string>
+    <string name="report_an_issue">Signaler un problème</string>
+    <string name="you_will_be_redirected_to_github">Vous allez être redirigé vers GitHub</string>
+    <string name="request_a_feature_or_suggest_an_idea">Demander une fonctionnalité\nou suggérer une idée</string>
     <string name="appearance">Apparence</string>
     <string name="colors">💚 COULEURS</string>
     <string name="theme">Thème</string>
@@ -76,12 +76,12 @@
     <string name="lockscreen">🔐 ÉCRAN DE VERROUILLAGE</string>
     <string name="show_song_cover">Afficher la pochette d\'album</string>
     <string name="use_song_cover_on_lockscreen">Afficher la pochette d\'album sur le fond d\'écran de l\'écran de vérrouillage</string>
-    <string name="cache">Cache</string>
+    <string name="cache">🗃 Cache</string>
     <string name="cache_cleared">Lorsque le cache manque d\'espace, les ressources en cache les moins récemment consultées seront effacées</string>
     <string name="image_cache">🖼 CACHE D\'IMAGE</string>
     <string name="max_size">Taille max</string>
     <string name="song_cache">🎶 CACHE DES CHANSONS</string>
-    <string name="database">Base de données</string>
+    <string name="database">🗄 Base de données</string>
     <string name="reset_quick_picks">Réinitialiser la sélections rapides</string>
     <string name="quick_picks_are_cleared">Les sélections rapides ont été effacées avec succès</string>
     <string name="backup">🔄 SAUVEGARDE</string>
@@ -91,7 +91,7 @@
     <string name="restore">⏪ RESTAURER</string>
     <string name="restore_1">Restaurer</string>
     <string name="import_the_database">Importer la base de données à partir du stockage</string>
-    <string name="other">Autre</string>
+    <string name="other">💠 Autre</string>
     <string name="android_auto">🚘 ANDROID AUTO</string>
     <string name="enable_unknown_sources">N’oubliez pas d’activer \"Sources inconnues\" dans les paramètres développeur d’Android Auto</string>
     <string name="android_auto_1">Android Auto</string>
@@ -101,7 +101,7 @@
     <string name="neither_save_new_searched_query">Ne pas enregistrer de nouvelles recherches ainsi que l’historique</string>
     <string name="clear_search_history">Effacer l’historique de recherche</string>
     <string name="history_is_empty">L’historique est vide</string>
-    <string name="service_lifetime">✔ SERVICE SUPPLEMENTAIRE D\'OPTIMISATION</string>
+    <string name="service_lifetime">🔋 SERVICE SUPPLEMENTAIRE D\'OPTIMISATION</string>
     <string name="battery_optimizations_applied">Si des optimisations de la batterie sont appliquées, la notification de lecture peut soudainement disparaître en cas de pause</string>
     <string name="is_android12">Depuis Android 12, la désactivation des optimisations de la batterie est nécessaire pour que l’option \"Service protégé\" prenne effet</string>
     <string name="ignore_battery_optimizations">Ignorer les optimisations de la batterie</string>
@@ -110,7 +110,7 @@
     <string name="invincible_service">Service protégé</string>
     <string name="turning_off_battery_optimizations_is_not_enough">Quand \"désactiver les optimisations de la batterie\" ne suffit pas</string>
     <string name="player_audio"><![CDATA[Player & Audio]]></string>
-    <string name="player">Lecteur</string>
+    <string name="player">⏯ Lecteur</string>
     <string name="persistent_queue">Playlist persistante</string>
     <string name="save_and_restore_playing_songs">Enregistrer et restaurer la lecture des chansons</string>
     <string name="resume_playback">Reprendre la lecture</string>
@@ -121,7 +121,7 @@
     <string name="loudness_normalization">Normalisation du volume</string>
     <string name="autoadjust_the_volume">Régler le volume à un niveau fixe</string>
     <string name="interact_with_the_system_equalizer">Paramètre de l\'égaliseur du système</string>
-    <string name="about">À propos</string>
+    <string name="about">ℹ À propos</string>
     <string name="more_of">Plus de</string>
     <string name="sleep_timer">Minuterie d\'arrêt</string>
     <string name="left">%1$s restantes</string>
@@ -139,18 +139,18 @@
     <string name="cache_reset_by_clicking_button">Attention en cliquant sur le bouton ci-dessous, le dossier d\'emplacement du cache sera réinitialisé au paramètre par défaut</string>
     <string name="cache_location_folder">Emplacement du dossier</string>
     <string name="custom_cache_from_android_10_may_not_be_available">À partir d\'Android 10, cette fonctionnalité peut ne plus être disponible</string>
-    <string name="reset_cache_location_folder">↩ RÉINITIALISER LE CACHE</string>
+    <string name="reset_cache_location_folder">🔙 RÉINITIALISER LE CACHE</string>
     <string name="used">"utilisé"</string>
     <string name="close_background_player">Effacer le lecteur en arrière plan</string>
     <string name="when_app_swipe_out_from_task_manager">Lorsque vous faites glisser en dehors du gestionnaire des applications récentes</string>
     <string name="opening_url">est entrain de charger...</string>
-    <string name="an_error_has_occurred_while_fetching_the_lyrics">❌ Une erreur est apparue lors de la récupération des paroles</string>
+    <string name="an_error_has_occurred_while_fetching_the_lyrics">🗣 Une erreur est apparue lors de la récupération des paroles</string>
     <string name="are_not_available_for_this_song">n\'est pas disponibles pour cette chanson</string>
-    <string name="error_a_network_error_has_occurred">❌ Une erreur réseau est apparue</string>
-    <string name="error_couldn_t_find_a_playable_audio_format">Ne peut pas trouver un format audio jouable</string>
-    <string name="error_the_original_video_source_of_this_song_has_been_deleted">La source vidéo originale de cette chanson a été supprimée</string>
-    <string name="error_this_song_cannot_be_played_due_to_server_restrictions">Cette chanson ne peut pas être lue en raison de restrictions du serveur</string>
-    <string name="error_the_returned_video_id_doesn_t_match_the_requested_one">L\'identifiant vidéo retourné ne correspond pas à celui demandé</string>
+    <string name="error_a_network_error_has_occurred">📶 Une erreur réseau est apparue</string>
+    <string name="error_couldn_t_find_a_playable_audio_format">🔊 Ne peut pas trouver un format audio jouable</string>
+    <string name="error_the_original_video_source_of_this_song_has_been_deleted">🌍 La source vidéo originale de cette chanson a été supprimée</string>
+    <string name="error_this_song_cannot_be_played_due_to_server_restrictions">🎶 Cette chanson ne peut pas être lue en raison de restrictions du serveur</string>
+    <string name="error_the_returned_video_id_doesn_t_match_the_requested_one">🎥 L\'identifiant vidéo retourné ne correspond pas à celui demandé</string>
     <string name="error_an_unknown_playback_error_has_occurred">❌ Une erreur de lecture inconnue s\'est produite, si le problème persiste signalé le problème</string>
     <string name="tips">✨ Recommandations</string>
     <string name="quick_pics_and_tips">✨ Sélection rapide et recommandations</string>
@@ -167,17 +167,17 @@
     <string name="none">🙅‍♂️ Aucun</string>
     <string name="light">◾ Légé</string>
     <string name="heavy">⬛ Énorme</string>
-    <string name="effects">🌟EFFETS</string>
+    <string name="effects">🌟 EFFETS</string>
     <string name="player_rotating_buttons">Boutons rotatifs</string>
     <string name="player_enable_rotation_buttons">Autorise la rotation des boutons lorsqu\'ils sont cliqués</string>
-    <string name="statistics">Statistiques</string>
-    <string name="today">Aujourd\'hui</string>
-    <string name="_1_week">1 Semaine</string>
-    <string name="_1_month">1 Mois</string>
-    <string name="_3_month">3 Mois</string>
-    <string name="_6_month">6 Mois</string>
-    <string name="_1_year">1 an</string>
-    <string name="all">Tout</string>
+    <string name="statistics">📊 Statistiques</string>
+    <string name="today">📊 Aujourd\'hui</string>
+    <string name="_1_week">📊 1 Semaine</string>
+    <string name="_1_month">📊 1 Mois</string>
+    <string name="_3_month">📊 3 Mois</string>
+    <string name="_6_month">📊 6 Mois</string>
+    <string name="_1_year">📊 1 an</string>
+    <string name="all">📂 Tout</string>
     <string name="most_played_songs">🎶 Chansons les plus écoutées</string>
     <string name="most_listened_artists">👤 Artistes les plus écoutés</string>
     <string name="most_albums_listened">💿 Albums les plus écoutés</string>
@@ -202,7 +202,7 @@
     <string name="system">⚙️ Système</string>
     <string name="unlimited">Illimité</string>
     <string name="_light">⚪ Clair</string>
-    <string name="downloaded">✈️ Musiques Hors-ligne</string>
+    <string name="downloaded">✈️ Musiques\nTéléchargé</string>
     <string name="turn_off">Desactivé</string>
     <string name="download">⬇️ Télécharger</string>
     <string name="_default">⚙️ Par défaut</string>
@@ -210,23 +210,23 @@
     <string name="no">Non</string>
     <string name="stop">Stop</string>
     <string name="preferences">👁 PREFERENCES</string>
-    <string name="discovery">Découvrir</string>
+    <string name="discovery">🌍 Découvrir</string>
     <string name="mood">Humeur</string>
     <string name="new_albums">🆕 Nouveaux albums</string>
     <string name="moods_and_genres">😀 Humeurs et genres</string>
     <string name="search_queries">" requêtes de recherche"</string>
-    <string name="not_find_battery_optimization_settings">Impossible de trouver les paramètres d\'optimisation de la batterie, veuillez les ajouter manuellement à la liste blanche</string>
+    <string name="not_find_battery_optimization_settings">🔋 Impossible de trouver les paramètres d\'optimisation de la batterie, veuillez les ajouter manuellement à la liste blanche</string>
     <string name="search">🔎 Rechercher</string>
-    <string name="it_seems_that_youtube_music_is_not_installed">Il semblerait que YouTube Music ne soit pas installé !</string>
+    <string name="it_seems_that_youtube_music_is_not_installed">❌ Il semblerait que YouTube Music ne soit pas installé !</string>
     <string name="listen_on_youtube">Écouter sur YouTube</string>
     <string name="listen_on_youtube_music">Écouter sur YouTube Music</string>
     <string name="on_device">📲 Sur l\'appareil</string>
     <string name="open_settings">Ouvrir les paramètres</string>
-    <string name="permission_declined_grant_media_permissions">Autorisation refusée, veuillez accorder les autorisations multimédias dans les paramètres de votre appareil</string>
+    <string name="permission_declined_grant_media_permissions">🎥 Autorisation refusée, veuillez accorder les autorisations multimédias dans les paramètres de votre appareil</string>
     <string name="wavy_timeline">Barre de navigation ondulée</string>    
     <string name="enable_wavy_timeline">Active la barre de navigation ondulée</string>
     <string name="play_next">Musique suivante</string>
-    <string name="toggle_lyrics">Toggle lyrics</string>
-    <string name="by_tapping_on_the_thumbnail">By tapping on the thumbnail</string>
-    <string name="require_mic_permission">Visualizer effect require mic permission, grant please.</string>
+    <string name="toggle_lyrics">Afficher les paroles</string>
+    <string name="by_tapping_on_the_thumbnail">En appuyant sur la pochette d'album</string>
+    <string name="require_mic_permission">🎙 Le visualiser nécessite l'autorisation du micro</string>
 </resources>
