--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -2,26 +2,26 @@
 <resources>
     <string name="cancel">Anulează</string>
     <string name="done">Terminat</string>
-    <string name="hidesong">Vrei cu adevărat să ascunzi această piesă? Timpul de redare și memoria cache vor fi șterse!\nAceastă acțiune este ireversibilă!</string>
-    <string name="new_playlist">Listă de redare nouă</string>
+    <string name="hidesong">Vrei cu adevărat să ascunzi această piesă? Timpul de ascultare și memoria cache vor fi șterse!\nAceastă acțiune este ireversibilă!</string>
+    <string name="new_playlist">Listă de ascultare nouă</string>
     <string name="start_radio">Pornește radioul</string>
     <string name="equalizer">Egalizator</string>
     <string name="stop_sleep_timer">Dorești să oprești timpul de repaus?</string>
-    <string name="set_sleep_timer">Setează un timpul de repaus</string>
-    <string name="add_to_playlist">Adaugă la lista de redare</string>
+    <string name="set_sleep_timer">Setează un timp de repaus</string>
+    <string name="add_to_playlist">Adaugă la lista de ascultare</string>
     <string name="go_to_album">Accesează la album</string>
     <string name="remove_from_queue">Elimină din coadă</string>
-    <string name="remove_from_playlist">Elimină din lista de redare</string>
+    <string name="remove_from_playlist">Elimină din lista de ascultare</string>
     <string name="hide">Ascunde</string>
     <string name="hide_from_quick_picks">Ascunde din \"Selecții rapide\"</string>
     <string name="related_albums">Albume similare</string>
     <string name="similar_artists">Artiști similari</string>
-    <string name="playlists_you_might_like">Liste de redare care ți-ar putea plăcea</string>
+    <string name="playlists_you_might_like">Liste de ascultare care ți-ar putea plăcea</string>
     <string name="an_error_has_occurred">A apărut o eroare</string>
     <string name="albums">Albume</string>
     <string name="artists">Artiști</string>
-    <string name="enter_the_playlist_name">Introdu numele listei de redare</string>
-    <string name="playlists">Liste de redare</string>
+    <string name="enter_the_playlist_name">Introdu numele listei de ascultare</string>
+    <string name="playlists">Liste de ascultare</string>
     <string name="favorites">Favorite</string>
     <string name="quick_picks">Selecții rapide</string>
     <string name="songs">Melodii</string>
@@ -36,7 +36,7 @@
     <string name="library">Bibliotecă</string>
     <string name="artist_no_release_album">Acest artist nu a lansat niciun album</string>
     <string name="artist_no_release_single">Acest artist nu a lansat niciun single</string>
-    <string name="delete_playlist">Vrei cu adevărat să ștergi această listă de redare?</string>
+    <string name="delete_playlist">Vrei cu adevărat să ștergi această listă de ascultare?</string>
     <string name="sync">Sincronizează</string>
     <string name="rename">Redenumește</string>
     <string name="delete">Șterge</string>
@@ -102,7 +102,7 @@
     <string name="clear_search_history">Șterge istoricul căutărilor</string>
     <string name="history_is_empty">Istoricul este gol</string>
     <string name="service_lifetime">DURATA DE VIAȚĂ A SERVICILOR</string>
-    <string name="battery_optimizations_applied">Dacă sunt aplicate optimizările ale bateriei, notificarea de redare poate dispărea atunci când este întreruptă.</string>
+    <string name="battery_optimizations_applied">Dacă sunt aplicate optimizările ale bateriei, notificarea de ascultare poate dispărea atunci când este întreruptă.</string>
     <string name="is_android12">Pe Android 12 sau mai nou, dezactivarea optimizărilor bateriei este necesară pentru ca opțiunea \"Serviciu invincibil\" să aibă efect.</string>
     <string name="ignore_battery_optimizations">Ignoră optimizările bateriei</string>
     <string name="already_unrestricted">Deaja fara restrictii</string>
@@ -112,8 +112,8 @@
     <string name="player_audio"><![CDATA[Player & Audio]]></string>
     <string name="player">Player</string>
     <string name="persistent_queue">Coadă persistentă</string>
-    <string name="save_and_restore_playing_songs">Salvează și restaurează melodiile în curs de redare</string>
-    <string name="resume_playback">Reia redarea</string>
+    <string name="save_and_restore_playing_songs">Salvează și restaurează melodiile în curs de ascultare</string>
+    <string name="resume_playback">Reia ascultarea</string>
     <string name="when_device_is_connected">Când un dispozitiv cu fir sau Bluetooth este conectat</string>
     <string name="audio">AUDIO</string>
     <string name="skip_silence">Sări peste linişte</string>
@@ -123,16 +123,16 @@
     <string name="interact_with_the_system_equalizer">Deschideți egalizatorul sistemului</string>
     <string name="about">Informații</string>
     <string name="more_of">Profilul lui</string>
-    <string name="sleep_timer">Timpul de repaus</string>
+    <string name="sleep_timer">Timp de repaus</string>
     <string name="left">mai rămân %1$s</string>
     <string name="set">Setează</string>
     <string name="confirm">Confirma</string>
     <string name="show">Arată</string>
-    <string name="unsynchronized_lyrics">versuri nesincronizate</string>
-    <string name="synchronized_lyrics">versuri sincronizate</string>
+    <string name="unsynchronized_lyrics">versurile nesincronizate</string>
+    <string name="synchronized_lyrics">versurile sincronizate</string>
     <string name="provided_by">Furnizat de</string>
     <string name="cleanup">CURĂȚENIE</string>
-    <string name="delete_playback_events">Ștergeți %1$s evenimente de redare</string>
+    <string name="delete_playback_events">Ștergeți %1$s evenimente de ascultare</string>
     <string name="existing_data_will_be_overwritten">Datele existente vor fi suprascrise.\n%1$s se va închide automat după restabilirea bazei de date.</string>
     <string name="on_queue">în coadă</string>
     <string name="folder_cache">FOLDER CACHE</string>
@@ -151,7 +151,7 @@
     <string name="error_the_original_video_source_of_this_song_has_been_deleted">Sursa video originală a acestei melodii a fost ștersă</string>
     <string name="error_this_song_cannot_be_played_due_to_server_restrictions">Această melodie nu poate fi redată din cauza restricțiilor serverilor</string>
     <string name="error_the_returned_video_id_doesn_t_match_the_requested_one">ID-ul videoclipului întors nu se potrivește cu cel solicitat</string>
-    <string name="error_an_unknown_playback_error_has_occurred">A apărut o eroare de redare necunoscută</string>
+    <string name="error_an_unknown_playback_error_has_occurred">A apărut o eroare de ascultare necunoscută</string>
     <string name="tips">Recomandări</string>
     <string name="quick_pics_and_tips">Recomandări și Selecții rapide</string>
     <string name="is_min_list_time_for_tips_or_quick_pics">Este timpul minim de ascultat pentru a include melodia ca Sfat sau Selecție rapidă</string>
@@ -226,7 +226,7 @@
     <string name="wavy_timeline">Bară de progres ondulată</string>
     <string name="enable_wavy_timeline">Utilizează bară de progres ondulată</string>
     <string name="play_next">Ascultă după</string>
-    <string name="toggle_lyrics">Toggle lyrics</string>
-    <string name="by_tapping_on_the_thumbnail">By tapping on the thumbnail</string>
-    <string name="require_mic_permission">Visualizer effect require mic permission, grant please.</string>
+    <string name="toggle_lyrics">Arată versurile</string>
+    <string name="by_tapping_on_the_thumbnail">Atingând miniatura</string>
+    <string name="require_mic_permission">Visualisatorul necesită permisiunea microfonului, acordațil vă rog.</string>
 </resources>
