Added emojies to categories in settings
Added emojies to categories in settings (like in the french version but less)

--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -49,7 +49,7 @@
     <string name="itag">Itag</string>
     <string name="bitrate">Rata de biți</string>
     <string name="size">Dimensiune</string>
-    <string name="cached">În memoria cache</string>
+    <string name="cached">Memorie cache</string>
     <string name="loudness">Intensitate</string>
     <string name="clear">Șterge</string>
     <string name="error">A apărut o eroare!</string>
@@ -63,12 +63,12 @@
     <string name="you_will_be_redirected_to_github">Vei fi redirecționat către GitHub</string>
     <string name="request_a_feature_or_suggest_an_idea">Solicită o funcție sau sugerează o idee</string>
     <string name="appearance">Aspect</string>
-    <string name="colors">CULORI</string>
+    <string name="colors">🎨 TEMURI</string>
     <string name="theme">Temă</string>
     <string name="theme_mode">Culoare temă</string>
-    <string name="shapes">FORME</string>
+    <string name="shapes">📐 FORME</string>
     <string name="thumbnail_roundness">Rotunjimea miniaturilor</string>
-    <string name="text">TEXT</string>
+    <string name="text">🔤 TEXT</string>
     <string name="use_system_font">Utilizează fontul sistemului</string>
     <string name="use_font_by_the_system">Utilizează fontul utilizat de sistem</string>
     <string name="apply_font_padding">Aplică spațiere între fonturi</string>
@@ -78,30 +78,30 @@
     <string name="use_song_cover_on_lockscreen">Utilizează coperta melodiei ca fundal pentru ecranul de blocare</string>
     <string name="cache">Cache</string>
     <string name="cache_cleared">Când memoria cache rămâne fără spațiu, resursele care nu au fost accesate de mult timp sunt șterse</string>
-    <string name="image_cache">CACHE DE IMAGINI</string>
+    <string name="image_cache">🖼️ CACHE IMAGINI</string>
     <string name="max_size">Dimensiune maximă</string>
-    <string name="song_cache">CACHE DE MELODII</string>
+    <string name="song_cache">🎵 CACHE MELODII</string>
     <string name="database">Bază de date</string>
     <string name="reset_quick_picks">Resetează selecțiile rapide</string>
     <string name="quick_picks_are_cleared">Selecțiile rapide au fost resetate</string>
-    <string name="backup">COPIE DE REZERVĂ</string>
+    <string name="backup">💾 COPIE DE REZERVĂ</string>
     <string name="personal_preference">Preferințe personale (de ex: Culoare temă) memoria cache este exclusă.</string>
     <string name="backup_1">Copie de rezervă</string>
     <string name="export_the_database">Exportează baza de date pe stocarea externă</string>
-    <string name="restore">RESTABILIRE</string>
+    <string name="restore">⏬ RESTABILIRE</string>
     <string name="restore_1">Restaurează</string>
     <string name="import_the_database">Importă baza de date din stocarea externă</string>
     <string name="other">Altele</string>
-    <string name="android_auto">ANDROID AUTO</string>
+    <string name="android_auto">🚘 ANDROID AUTO</string>
     <string name="enable_unknown_sources">Amintiți-vă să activați \"Surse necunoscute\" în Setările dezvoltator din Android Auto.</string>
     <string name="android_auto_1">Android Auto</string>
     <string name="enable_android_auto_support">Activează suportul pentru Android Auto</string>
-    <string name="search_history">ISTORICUL CĂUTĂRILOR</string>
+    <string name="search_history">🔎 ISTORICUL CĂUTĂRILOR</string>
     <string name="pause_search_history">Pauză pentru istoricul căutărilor</string>
     <string name="neither_save_new_searched_query">Nu salva noile căutări și nu se va afișa istoricul</string>
     <string name="clear_search_history">Șterge istoricul căutărilor</string>
     <string name="history_is_empty">Istoricul este gol</string>
-    <string name="service_lifetime">DURATA DE VIAȚĂ A SERVICILOR</string>
+    <string name="service_lifetime">🕗 DURATA DE VIAȚĂ A SERVICILOR</string>
     <string name="battery_optimizations_applied">Dacă sunt aplicate optimizările ale bateriei, notificarea de ascultare poate dispărea atunci când este întreruptă.</string>
     <string name="is_android12">Pe Android 12 sau mai nou, dezactivarea optimizărilor bateriei este necesară pentru ca opțiunea \"Serviciu invincibil\" să aibă efect.</string>
     <string name="ignore_battery_optimizations">Ignoră optimizările bateriei</string>
@@ -131,15 +131,15 @@
     <string name="unsynchronized_lyrics">versurile nesincronizate</string>
     <string name="synchronized_lyrics">versurile sincronizate</string>
     <string name="provided_by">Furnizat de</string>
-    <string name="cleanup">CURĂȚENIE</string>
+    <string name="cleanup">🧹 CURĂȚENIE</string>
     <string name="delete_playback_events">Ștergeți %1$s evenimente de ascultare</string>
     <string name="existing_data_will_be_overwritten">Datele existente vor fi suprascrise.\n%1$s se va închide automat după restabilirea bazei de date.</string>
     <string name="on_queue">în coadă</string>
-    <string name="folder_cache">FOLDER CACHE</string>
+    <string name="folder_cache">📁 CACHE FOLDER</string>
     <string name="cache_reset_by_clicking_button">Atenție! Făcând clic pe butonul de mai jos, folderul cache va fi resetat!</string>
     <string name="cache_location_folder">Locație folder</string>
     <string name="custom_cache_from_android_10_may_not_be_available">Pe Android 10 sau mai nou, această funcție poate să nu fie disponibilă</string>
-    <string name="reset_cache_location_folder">RESETARE FOLDERUL CACHE</string>
+    <string name="reset_cache_location_folder">Resetează folderul cache</string>
     <string name="used">" utilizat"</string>
     <string name="close_background_player">Închideți playerul de fundal</string>
     <string name="when_app_swipe_out_from_task_manager">Când aplicația este închisă din fundal</string>
@@ -167,7 +167,7 @@
     <string name="none">Nici unul</string>
     <string name="light">Leger</string>
     <string name="heavy">Foarte mare</string>
-    <string name="effects">Efecte</string>
+    <string name="effects">✨ EFECTE</string>
     <string name="player_rotating_buttons">Butoane rotative</string>
     <string name="player_enable_rotation_buttons">Activați rotația butoanelor când se face clic pe ele</string>
     <string name="statistics">Statistici</string>
@@ -182,12 +182,12 @@
     <string name="most_listened_artists">Most listened artists</string>
     <string name="most_albums_listened">Most albums listened</string>
     <string name="most_played_playlists">Most played playlists</string>
-    <string name="languages">Limbi</string>
+    <string name="languages">🌍 LIMBĂ</string>
     <string name="app_language">Limba aplicației</string>
     <string name="in_alphabetical_order">In ordinea alfabetică:</string>
-    <string name="contributors">CONTRIBUITORI</string>
-    <string name="troubleshooting">DEPANARE</string>
-    <string name="social">SOCIAL</string>
+    <string name="contributors">🤝 CONTRIBUITORI</string>
+    <string name="troubleshooting">🔧 DEPANARE</string>
+    <string name="social">💬 SOCIAL</string>
     <string name="english">Engleză (English)</string>
     <string name="italian">Italiană (Italiano)</string>
     <string name="czech">Cehă (Čeština)</string>
@@ -216,7 +216,7 @@
     <string name="search">Caută...</string>
     <string name="no">Nu</string>
     <string name="stop">Stop</string>
-    <string name="preferences">PREFERINȚE</string>
+    <string name="preferences">💖 PREFERINȚE</string>
     <string name="it_seems_that_youtube_music_is_not_installed">YouTube Music nu este instalat!</string>
     <string name="listen_on_youtube">Ascultă pe YouTube</string>
     <string name="listen_on_youtube_music">Ascultă pe YouTube Music</string>
