--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -204,29 +204,29 @@
     <string name="_light">Claro</string>
     <string name="downloaded">Descargado</string>
     <string name="turn_off">Desactivar</string>
-    <string name="download">Download</string>
+    <string name="download">Descargar</string>
     <string name="_default">Por defecto</string>
     <string name="dynamic">Dinámico</string>
-    <string name="discovery">Discovery</string>
-    <string name="mood">Mood</string>
-    <string name="new_albums">New albums</string>
-    <string name="moods_and_genres">Moods and genres</string>
-    <string name="search_queries">" search queries"</string>
-    <string name="not_find_battery_optimization_settings">Couldn\'t find battery optimization settings, please whitelist manually</string>
-    <string name="search">Search...</string>
+    <string name="discovery">Explorar</string>
+    <string name="mood">Ánimo</string>
+    <string name="new_albums">Nuevos álbumes</string>
+    <string name="moods_and_genres">Ánimo y géneros</string>
+    <string name="search_queries">" entradas de búsqueda"</string>
+    <string name="not_find_battery_optimization_settings">No se pudieron encontrar los ajustes de optimización de la batería. Por favor, dale permiso manualmente.</string>
+    <string name="search">Buscar…</string>
     <string name="no">No</string>
     <string name="stop">Detener</string>
     <string name="preferences">PREFERENCIAS</string>
-    <string name="it_seems_that_youtube_music_is_not_installed">It seems that YouTube Music is not installed!</string>
-    <string name="listen_on_youtube">Listen on YouTube</string>
-    <string name="listen_on_youtube_music">Listen on YouTube Music</string>
-    <string name="on_device">On device</string>
-    <string name="open_settings">Open settings</string>
-    <string name="permission_declined_grant_media_permissions">Permission declined, please grant media permissions in the settings of your device.</string>
-    <string name="wavy_timeline">Wavy timeline</string>
-    <string name="enable_wavy_timeline">Enable the wavy timeline</string>
-    <string name="play_next">Play next</string>
-    <string name="toggle_lyrics">Toggle lyrics</string>
-    <string name="by_tapping_on_the_thumbnail">By tapping on the thumbnail</string>
-    <string name="require_mic_permission">Visualizer effect require mic permission, grant please.</string>
+    <string name="it_seems_that_youtube_music_is_not_installed">¡Parece que YouTube Music no está instalado!</string>
+    <string name="listen_on_youtube">Reproducir en YouTube</string>
+    <string name="listen_on_youtube_music">Reproducir en YouTube Music</string>
+    <string name="on_device">En el dispositivo</string>
+    <string name="open_settings">Abrir ajustes</string>
+    <string name="permission_declined_grant_media_permissions">Permiso denegado. Por favor, concede el permiso de archivos multimedia en los ajustes de tu dispositivo.</string>
+    <string name="wavy_timeline">Línea de progreso ondulada</string>
+    <string name="enable_wavy_timeline">Activa la línea de progreso ondulada</string>
+    <string name="play_next"Reproducir a continuación</string>
+    <string name="toggle_lyrics">Mostrar la letra</string>
+    <string name="by_tapping_on_the_thumbnail">Al pulsar en la miniatura</string>
+    <string name="require_mic_permission">El efecto de visualizador requiere el permiso de micrófono. Por favor, concédelo.</string>
 </resources>
